@@ -120,7 +120,7 @@ Muscat uses a third approach, which is to perform both queries
 simultaneously.  This allows us to
 </P>
 
-<H3>Null queries</H3>
+<H3>Undefined queries</H3>
 <P>
 These are an added complication, although they make it possible to write
 much neater code, and to perform some extra types of query. (See
@@ -129,7 +129,7 @@ much neater code, and to perform some extra types of query. (See
 
 <P>
 Null queries are not empty queries, or queries which match nothing: rather,
-they should be thought of as placeholders.  A null query is created by
+they should be thought of as placeholders.  An undefined query is created by
 calling the default constructor for OmQuery(), and can then be used in
 many places in construction of a query.
 </P>
